fix: add native access flag to readme